<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnDivide">/</string>
    <string name="btnMultiplication">*</string>
    <string name="btnSubtraction">-</string>
    <string name="btnAddiction">+</string>
    <string name="btnEquals">=</string>
    <string name="btnDecimal">.</string>
    <string name="btnClear">C</string>
    <string name="btnBackspace">&lt;</string>
    <string name="btnNegPos">+/-</string>
    <string name="txtOutput"></string>

</resources>
