<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calculator.MainActivity" >

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/btn7" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btn7"
        android:layout_below="@+id/btn7"
        android:text="@string/btn4" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn4"
        android:layout_below="@+id/btn4"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn1"
        android:layout_below="@+id/btn1"
        android:text="@string/btn0" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn7"
        android:layout_toRightOf="@+id/btn7"
        android:text="@string/btn8" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn4"
        android:layout_alignBottom="@+id/btn4"
        android:layout_alignLeft="@+id/btn8"
        android:text="@string/btn5" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn1"
        android:layout_alignBottom="@+id/btn1"
        android:layout_alignLeft="@+id/btn5"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/btnDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn0"
        android:layout_alignBottom="@+id/btn0"
        android:layout_alignLeft="@+id/btn2"
        android:text="@string/btnDecimal" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn8"
        android:layout_alignBottom="@+id/btn8"
        android:layout_toRightOf="@+id/btn8"
        android:text="@string/btn9" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn9"
        android:layout_below="@+id/btn9"
        android:text="@string/btn6" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDecimal"
        android:layout_toRightOf="@+id/btn2"
        android:text="@string/btn3" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnDecimal"
        android:layout_alignBottom="@+id/btnDecimal"
        android:layout_toRightOf="@+id/btnDecimal"
        android:text="@string/btnEquals" />

    <Button
        android:id="@+id/btnAddiction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnEquals"
        android:layout_alignBottom="@+id/btnEquals"
        android:layout_alignParentRight="true"
        android:text="@string/btnAddiction" />

    <Button
        android:id="@+id/btnSubtraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn3"
        android:layout_alignBottom="@+id/btn3"
        android:layout_alignLeft="@+id/btnAddiction"
        android:text="@string/btnSubtraction" />

    <Button
        android:id="@+id/btnMultiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn6"
        android:layout_alignBottom="@+id/btn6"
        android:layout_alignParentRight="true"
        android:text="@string/btnMultiplication" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn9"
        android:layout_alignRight="@+id/btnMultiplication"
        android:text="@string/btnDivide" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn9"
        android:layout_alignRight="@+id/btnDivide"
        android:text="@string/btnClear" />

    <Button
        android:id="@+id/btnBackspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn9"
        android:layout_alignLeft="@+id/btn9"
        android:text="@string/btnBackspace" />

    <Button
        android:id="@+id/btnNegPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnBackspace"
        android:layout_toLeftOf="@+id/btnBackspace"
        android:text="@string/btnNegPos" />

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/txtOutput" />

</RelativeLayout>